--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,6 +36,7 @@ application.langs="en"
 
  db.default.driver=org.postgresql.Driver
  db.default.url="jdbc:postgresql://localhost/pd_project_db"
+# db.default.url="jdbc:postgresql://localhost/pd_test"
  db.default.user=postuser1
  db.default.password=postpass
 
